# esp32-s3-touch-lcd-ha-dashboard

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  ¨
com/waveshare__esp32_s3_touch_lcd_4/: esp32_s3_touch_lcd_4.c
com/waveshare__esp32_s3_touch_lcd_4.c/: CHECKSUMS.json  idf_component.yml
com/waveshare__esp32_s3_touch_lcd_4/waveshare__esp32_s3_touch_lcd_4/: .component_hash
main/: CMakeLists.txt  backg_room1.c  esp32-s3-touch-lcd-ha-dashboard.c  floor_lamp.c  idf_component.yml  lamp_config.c  lamp_config.h  mqtt_config.c  mqtt_config.h  ui_img_clock_icon.c  ui_thermostat_icon.c  wifi_config.c  wifi_config.h  wifi_init.c
